<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>motoman</name>
  <version>0.3.5</version>
  <description>ROS-Industrial support for Yaskawa Motoman manipulators (metapackage).</description>
  <author>Shaun Edwards</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>
  <license>BSD</license>

  <url type="bugtracker">https://github.com/ros-industrial/motoman/issues</url>
  <url type="repository">https://github.com/ros-industrial/motoman</url>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <exec_depend>motoman_gp7_support</exec_depend>
  <exec_depend>motoman_gp20_support</exec_depend>
  <exec_depend>motoman_ma2010_support</exec_depend>
  <exec_depend>motoman_mh5_support</exec_depend>
  <exec_depend>motoman_ms210_support</exec_depend>
  <exec_depend>motoman_resources</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
